--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,25 @@ environment:
 dependencies:
   bordered_text: ^2.0.0
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  dio: ^4.0.6
   flutter:
     sdk: flutter
+  get_it: ^7.2.0
   google_fonts: 2.3.2
+  injectable: ^1.5.3
   video_player: 2.4.2
 
 dev_dependencies:
+  build_runner: ^2.2.0
+  flutter_bloc: ^8.0.1
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  freezed: 1.1.1
+  injectable_generator: 1.5.3
+  json_annotation: ^4.6.0
+  json_serializable: ^6.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
