--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   video_player: 2.4.2
 
 dev_dependencies:
+  bloc: ^8.1.0
   build_runner: ^2.2.0
   flutter_bloc: ^8.0.1
   flutter_lints: ^1.0.0
