--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dio: ^4.0.6
   flutter:
     sdk: flutter
+  freezed_annotation: 1.1.0
   get_it: ^7.2.0
   google_fonts: 2.3.2
   injectable: ^1.5.3
@@ -40,6 +41,7 @@ dependencies:
 
 dev_dependencies:
   bloc: ^8.1.0
+  bloc_provider: ^1.0.0
   build_runner: ^2.2.0
   flutter_bloc: ^8.0.1
   flutter_lints: ^1.0.0
@@ -48,6 +50,7 @@ dev_dependencies:
   freezed: 1.1.1
   injectable_generator: 1.5.3
   json_annotation: ^4.6.0
+
   json_serializable: ^6.3.1
 
 # For information on the generic Dart part of this file, see the
